package com.jovisco.tutorial.patterns.factorymethods;

public interface Shape {

    void draw();
}
